--- a/src/app/modules/tribal-community/tribal-community.component.html
+++ b/src/app/modules/tribal-community/tribal-community.component.html
@@ -1,7 +1,7 @@
 <app-layout>
     <div class="main">
-        <section class="page-banner d-grid place-content-center">
-            <h1 class="display-3">Our tribal community</h1>
+        <section class="page-banner d-grid place-items-center">
+            <h1 class="display-3 text-center">Our tribal community</h1>
         </section>
         <section class="my-5 py-5">
             <div class="container">
