--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -1,123 +1,115 @@
-<section class="search-rooms py-5">
-  <div class="container">
-    <h2 class="text-center mb-4">Search room availability</h2>
-    <form>
-      <div class="row align-items-center justify-content-center gap-3 gap-lg-0">
-        <div class="col-lg-3">
-          <mat-form-field appearance="outline">
-            <mat-label>Select Resort</mat-label>
-            <mat-select required>
-              <mat-option value="VanaVihari, Maredumilli">Vanavihari, Maredumilli</mat-option>
-              <mat-option value="Jungle Star, Valamuru">Jungle Star, Valamuru</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div class="col-lg-3">
-          <mat-form-field appearance="outline">
-            <mat-label>Checkin & Checkout</mat-label>
-            <mat-date-range-input [rangePicker]="picker">
-              <input matStartDate placeholder="Checkin date" />
-              <input matEndDate placeholder="Checkout date" />
-            </mat-date-range-input>
-            <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-          </mat-form-field>
-        </div>
-        <div class="col-lg-3 position-relative">
-          <mat-form-field appearance="outline">
-            <mat-label>Guests</mat-label>
-            <input type="text"  [value]="RoomValues" matInput data-bs-toggle="modal" data-bs-target="#modalId" />
-          </mat-form-field>
-          <!-- modal for adding guests, children and rooms -->
-          <div class="modal fade position-absolute modal-searchbar" id="modalId" tabindex="-1" aria-labelledby="modalTitleId"
-            aria-hidden="true" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false"
-            data-bs-keyboard="true">
-            <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <!-- Angular Material form fields for adults, children, rooms -->
-                  <div class="container">
-                    <!-- Adults section -->
-                    <div class="row mt-3">
-                      <label for="adults" class="col-sm-4">Adults:</label>
-                      <div class="col-sm-8">
-                        <div class="input-group">
-                          <button class="btn btn-outline-secondary" type="button" (click)="decrementAdults()">
-                            -
-                          </button>
-                          <input type="number" id="adultsCount" name="adults" class="form-control text-center"
-                            [(ngModel)]="adultsCount" />
-                          <button class="btn btn-outline-secondary" type="button" (click)="incrementAdults()">
-                            +
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Children section -->
-                    <div class="row my-3">
-                      <label for="children" class="col-sm-4">Children:</label>
-                      <div class="col-sm-8">
-                        <div class="input-group">
-                          <button class="btn btn-outline-secondary" type="button" (click)="decrementChildren()">
-                            -
-                          </button>
-                          <input type="number" id="childrenCount" name="children" class="form-control text-center"
-                            [(ngModel)]="childrenCount" />
-                          <button class="btn btn-outline-secondary" type="button" (click)="incrementChildren()"
-                            [disabled]="isMaxReached">
-                            +
-                          </button>
-                        </div>
-                        <div *ngIf="isMaxReached" class="text-danger mt-2">
-                          Maximum limit reached for children ({{ maxChildren }}).
-                        </div>
-                      </div>
-                    </div>
-  
-                    <!-- Age dropdowns -->
-                    <div id="ageDropdowns" class="row">
-                      <div class="col-auto" *ngFor="let i of getChildrenCountArray()">
-                        <select class="form-select mb-3" name="childAge" [(ngModel)]="selectedAges[i]">
-                          <option value="" disabled>Age required</option>
-                          <option value="0-2">0 - 2 years</option>
-                          <option value="3-5">3 - 5 years</option>
-                          <option value="6-10">6 - 10 years</option>
-                        </select>
-                      </div>
-                    </div>
-  
-                    <!-- Rooms section -->
-                    <div class="row">
-                      <label for="rooms" class="col-sm-4">Rooms:</label>
-                      <div class="col-sm-8">
-                        <div class="input-group">
-                          <button class="btn btn-outline-secondary" type="button" (click)="decrementRooms()">
-                            -
-                          </button>
-                          <input type="number" id="roomsCount" name="rooms" class="form-control text-center"
-                            [(ngModel)]="roomsCount" />
-                          <button class="btn btn-outline-secondary" type="button" (click)="incrementRooms()">
-                            +
-                          </button>
-                        </div>
+<section class="search-rooms">
+  <form>
+    <div class="row align-items-center justify-content-center gap-3 gap-lg-0">
+      <div class="col-lg-3">
+        <mat-form-field appearance="outline">
+          <mat-label>Select Resort</mat-label>
+          <mat-select required>
+            <mat-option value="VanaVihari, Maredumilli">Vanavihari, Maredumilli</mat-option>
+            <mat-option value="Jungle Star, Valamuru">Jungle Star, Valamuru</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-lg-3">
+        <mat-form-field appearance="outline">
+          <mat-label>Checkin & Checkout</mat-label>
+          <mat-date-range-input [rangePicker]="picker">
+            <input matStartDate placeholder="Checkin date" />
+            <input matEndDate placeholder="Checkout date" />
+          </mat-date-range-input>
+          <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-date-range-picker #picker></mat-date-range-picker>
+        </mat-form-field>
+      </div>
+      <div class="col-lg-3 position-relative">
+        <mat-form-field appearance="outline">
+          <mat-label>Guests</mat-label>
+          <input type="text" [value]="RoomValues" matInput data-bs-toggle="modal" data-bs-target="#modalId" />
+        </mat-form-field>
+        <!-- modal for adding guests, children and rooms -->
+        <div class="modal fade position-absolute modal-searchbar" id="modalId" tabindex="-1"
+          aria-labelledby="modalTitleId" aria-hidden="true" role="dialog" data-bs-backdrop="static">
+          <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-body">
+                <!-- Angular Material form fields for adults, children, rooms -->
+                  <!-- Adults section -->
+                  <div class="row mt-3">
+                    <label for="adults" class="col-sm-6">No. of Adults:</label>
+                    <div class="col-sm-6">
+                      <div class="input-group">
+                        <button class="btn " type="button" (click)="decrementAdults()">
+                          -
+                        </button>
+                        <input type="number" id="adultsCount" name="adults" class="form-control text-center"
+                          [(ngModel)]="adultsCount" />
+                        <button class="btn " type="button" (click)="incrementAdults()">
+                          +
+                        </button>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="getvalues(roomsCount,adultsCount)">
-                    Done
-                  </button>
-                </div>
+                  <!-- Children section -->
+                  <div class="row my-3">
+                    <label for="children" class="col-sm-6">No. of Children:</label>
+                    <div class="col-sm-6">
+                      <div class="input-group">
+                        <button class="btn " type="button" (click)="decrementChildren()">
+                          -
+                        </button>
+                        <input type="number" id="childrenCount" name="children" class="form-control text-center"
+                          [(ngModel)]="childrenCount" />
+                        <button class="btn " type="button" (click)="incrementChildren()" [disabled]="isMaxReached">
+                          +
+                        </button>
+                      </div>
+                      <div *ngIf="isMaxReached" class="text-danger mt-2">
+                        Maximum limit reached for children ({{ maxChildren }}).
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Age dropdowns -->
+                  <div id="ageDropdowns">
+                    <div class="col-auto" *ngFor="let i of getChildrenCountArray()">
+                      <select class="form-select mb-3" name="childAge" [(ngModel)]="selectedAges[i]">
+                        <option value="" disabled>Age required</option>
+                        <option value="0-2">0 - 2 years</option>
+                        <option value="3-5">3 - 5 years</option>
+                        <option value="6-10">6 - 10 years</option>
+                      </select>
+                    </div>
+                  </div>
+                  <!-- Rooms section -->
+                  <div class="row">
+                    <label for="rooms" class="col-sm-6">No. of Rooms:</label>
+                    <div class="col-sm-6">
+                      <div class="input-group">
+                        <button class="btn " type="button" (click)="decrementRooms()">
+                          -
+                        </button>
+                        <input type="number" id="roomsCount" name="rooms" class="form-control text-center"
+                          [(ngModel)]="roomsCount" />
+                        <button class="btn " type="button" (click)="incrementRooms()">
+                          +
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="modal-footer">
+                <button mat-raised-button color="primary" type="button" class="w-100" data-bs-dismiss="modal"
+                  (click)="getvalues(roomsCount,adultsCount)">Done</button>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-auto">
-          <button mat-raised-button class="btn btn-primary" type="button" (click)="goToVanavihari()" >Search</button>
-        </div>
       </div>
-    </form>
-  </div>
+      <div class="col-auto flex-grow-1">
+        <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Sign In</button> -->
+
+        <button mat-raised-button color="primary" class="w-100" (click)="goToVanavihari()">Search</button>
+      </div>
+    </div>
+  </form>
 </section>
