--- a/src/app/modules/about-vanavihari/about-vanavihari.component.html
+++ b/src/app/modules/about-vanavihari/about-vanavihari.component.html
@@ -1,7 +1,7 @@
 <app-layout>
     <div class="main">
-        <section class="page-banner d-grid place-content-center">
-            <h1 class="display-3">About Vanavihari</h1>
+        <section class="page-banner d-grid place-items-center">
+            <h1 class="display-3 text-center">About Vanavihari</h1>
         </section>
         <section class="my-5">
             <div class="container">
