--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,14 +1,14 @@
 <header>
   <nav class="navbar navbar-light py-1 fixed-top bg-light">
     <div class="container-fluid">
-      <button class="navbar-toggler border-0" type="button" (click)="toggleSidebar()">
+      <button class="navbar-toggler border-0 p-0" type="button" (click)="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand ms-auto ms-md-0 me-lg-auto" href="#">
+      <a class="navbar-brand me-auto py-0" href="#">
         <img src="assets/img/vanavihari-logo.png" alt="vanavihari_logo">
       </a>
-      <ul class="navbar-nav d-none d-lg-flex flex-lg-row gap-3">
-        <li class="nav-item dropdown">
+      <ul class="navbar-nav d-flex flex-row gap-1 gap-lg-3">
+        <li class="nav-item dropdown d-none d-lg-block">
           <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <i class="fa-solid fa-calendar-check"></i> Book Resort
@@ -18,11 +18,11 @@
             <a class="dropdown-item" (click)="goToJungleStar()">Jungle Star, Valamuru</a>
           </div>
         </li>
-        <li class="nav-item">
+        <li class="nav-item d-none d-lg-block">
           <a class="nav-link" href="mailto:info@vanavihari.com" title="click to send email">
             <i class="fa-regular fa-envelope"></i> info@vanavihari.com</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item d-none d-lg-block">
           <a class="nav-link" href="tel:+919494151617" title="call">
             <i class="fa-solid fa-mobile-screen"></i> 9494151617</a>
         </li>
@@ -35,7 +35,7 @@
             <i class="fa-solid fa-sign-in"></i> Sign up</a>
         </li>
         <!-- *ngIf="isLoggedIn()" -->
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown d-none ">
           <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <i class="fa-solid fa-user-circle"></i> My Account
@@ -122,14 +122,14 @@
           </a>
         </li>
 
-        <li class="sidebar-item">
+        <!-- <li class="sidebar-item">
           <a class="sidebar-link d-lg-none" routerLink="/sign-in" routerLinkActive="active"
             ariaCurrentWhenActive="page"><i class="fa-solid fa-key"></i> Sign in</a>
         </li>
         <li class="sidebar-item">
           <a class="sidebar-link d-lg-none" routerLink="/sign-up" routerLinkActive="active"
             ariaCurrentWhenActive="page"><i class="fa-solid fa-sign-in"></i> Sign up</a>
-        </li>
+        </li> -->
       </ul>
 
     </div>
@@ -149,23 +149,23 @@
         <h3>Links</h3><br>
         <ul class="list-unstyled">
           <!-- <li><a class="text-decoration-none" (click)="goToAboutUs()">About us</a></li> -->
-          <li><a class="text-decoration-none" (click)="goToAwards()">Awards and News</a></li>
-          <li><a class="text-decoration-none" (click)="goToPrivacy()">Privacy Policy</a></li>
-          <li><a class="text-decoration-none" (click)="goToTerms()">Terms and Conditions</a></li>
+          <li class="mt-2"><a class="" (click)="goToAwards()">Awards and News</a></li>
+          <li class="mt-2"><a class="" (click)="goToPrivacy()">Privacy Policy</a></li>
+          <li class="mt-2"><a class="" (click)="goToTerms()">Terms and Conditions</a></li>
         </ul>
       </div>
       <div class="col-md-4">
         <h3>Contact Info</h3>
-        <address style="line-height: 1.5;">Co-ordinator(Complex Manager),<br>
+        <address style="line-height: 2;">Co-ordinator(Complex Manager),<br>
           Community Based Eco-Tourism, <br>
           Maredumilli.
         </address>
         <ul class="list-unstyled">
-          <li> <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;
+          <li class="mt-2"> <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;
             <a class="text-decoration-none" href="mailto:info@vanavihari.com"
               title="click to send email">info@vanavihari.com</a>
           </li>
-          <li>
+          <li class="mt-2">
             <!-- font awesome email -->
             <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;
             <a class="text-decoration-none" href="tel:+919494151617" title="call">9494151617</a>
