--- a/src/app/modules/resort-listing/resort-listing.component.html
+++ b/src/app/modules/resort-listing/resort-listing.component.html
@@ -1,7 +1,7 @@
 <app-layout>
     <div class="main">
-        <section class="page-banner d-grid place-content-center">
-            <h1 class="display-3">Vanavihari, Maredumilli</h1>
+        <section class="page-banner d-grid place-items-center">
+            <h1 class="display-3 text-center">Vanavihari, Maredumilli</h1>
         </section>
 
         <div class="container">
