--- a/src/app/modules/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/modules/terms-and-conditions/terms-and-conditions.component.html
@@ -1,6 +1,6 @@
 <app-layout>
   <div class="main">
-    <section class="page-banner d-grid place-content-center">
+    <section class="page-banner d-grid place-items-center">
       <h1 class="display-3">Terms and conditions</h1>
     </section>
     <div class="container mt-5 mb-5 text-forest">
@@ -70,36 +70,38 @@
               </ul>
             </div>
             <div class="tab-pane fade" id="food" role="tabpanel">
-              <table class="table table-bordered mt-3">
-                <thead>
-                  <tr>
-                    <th>Resort</th>
-                    <th>Food Included</th>
-                    <th>Guests included</th>
-                    <th>Maximum guests</th>
-                    <th>Weekday</th>
-                    <th>Weekend</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Jungle Star Eco Camp</td>
-                    <td><i class="fas fa-check text-success"></i> Yes</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>&#8377; 1500</td>
-                    <td>&#8377; 1750</td>
-                  </tr>
-                  <tr>
-                    <td>Vanavihari</td>
-                    <td><i class="fas fa-times text-danger"></i> No</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>&#8377; 500</td>
-                    <td>&#8377; 700</td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="table-responsive">
+                <table class="table table-hover mt-3">
+                  <thead>
+                    <tr>
+                      <th>Resort</th>
+                      <th>Food Included</th>
+                      <th>Guests included</th>
+                      <th>Maximum guests</th>
+                      <th>Weekday</th>
+                      <th>Weekend</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Jungle Star Eco Camp</td>
+                      <td><i class="fas fa-check text-success"></i> Yes</td>
+                      <td>2</td>
+                      <td>3</td>
+                      <td>&#8377; 1500</td>
+                      <td>&#8377; 1750</td>
+                    </tr>
+                    <tr>
+                      <td>Vanavihari</td>
+                      <td><i class="fas fa-times text-danger"></i> No</td>
+                      <td>-</td>
+                      <td>-</td>
+                      <td>&#8377; 500</td>
+                      <td>&#8377; 700</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
               <p class="text-muted">Note: Weekdays (Monday - Thursday), Weekends (Friday - Sunday), No room service will
                 be provided.</p>
             </div>
@@ -110,28 +112,30 @@
                 <li class="list-group-item"><i class="fas fa-dot-circle text-forest"></i> Full payment is required upon
                   check-in. We accept cash, credit & debit cards, UPI, etc.</li>
               </ul>
-              <table class="table table-bordered mt-3">
-                <thead>
-                  <tr>
-                    <th>Cancellation Timeframe</th>
-                    <th>Refund Percentage</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>48 to 72 hours prior</td>
-                    <td>90%</td>
-                  </tr>
-                  <tr>
-                    <td>24 to 48 hours prior</td>
-                    <td>80%</td>
-                  </tr>
-                  <tr>
-                    <td>Within 24 hours</td>
-                    <td>No refund</td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="table-responsive">
+                <table class="table table-bordered mt-3">
+                  <thead>
+                    <tr>
+                      <th>Cancellation Timeframe</th>
+                      <th>Refund Percentage</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>48 to 72 hours prior</td>
+                      <td>90%</td>
+                    </tr>
+                    <tr>
+                      <td>24 to 48 hours prior</td>
+                      <td>80%</td>
+                    </tr>
+                    <tr>
+                      <td>Within 24 hours</td>
+                      <td>No refund</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
             <div class="tab-pane fade" id="checkin" role="tabpanel">
               <ul class="list-group mt-3">
