--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-5">
           <img src="assets/images/login-image-left.svg" alt="login-image-left">
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 mt-3 mt-md-0">
           <div class="card border-0">
             <div class="card-body p-3">
               <div class="card-title text-center">
